tests/paczka1/fuzzy1/14238489.err
Error in line 1: S920 S294 47,2
Error in line 7: S920 S294 88,3
Error in line 20: YTpE8 S294 31,9
Error in line 22: YTpE8 S920 57,1
Error in line 25: YTpE8 A545 40,8
Error in line 15: mSR S920 11,8
Error in line 33: 3IiRPvl6R S294 21,9
Error in line 36: YTpE8 A545 79,54
Error in line 32: mSR A119 85,1
Error in line 39: mSR S920 83,4
